# my_agent

./: .env.example  .gitignore  GALLETA_README.md  README_GALLETA.md  WARP.md  init_db.sql  langgraph.json  pyproject.toml  restart_server.ps1  setup_database.py  start_server.ps1  test_galleta.py
api/: main.py
notebooks/: 01-notebook.ipynb  03-messages.ipynb  04-llm.ipynb  test_simple_agent.ipynb
src/: main.py  server.py  simple.py
